// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User > should render loading 1`] = `
<div>
  <div
    class="_loading_fdfca4"
  >
    <div
      class="_loader_fdfca4"
    />
  </div>
</div>
`;

exports[`User > should render server error 1`] = `
<div>
  <div
    class="_error_fdfca4"
  >
    <div
      class="_error_fdfca4"
    >
      Server error
    </div>
  </div>
</div>
`;
